--- a/mall-order/src/main/resources/templates/confirm.html
+++ b/mall-order/src/main/resources/templates/confirm.html
@@ -596,8 +596,11 @@
     </div>
 
     <!--地址-->
-    <div class="top-3" th:each="addr:${orderConfirmData.address}">
-        <p>[[${addr.name}]]</p><span>[[${addr.name}]]  [[${addr.province}]]  [[${addr.city}]][[${addr.region}]][[${addr.detailAddress}]]  [[${addr.phone}]]</span>
+    <div class="top-3 addr-item" th:each="addr:${orderConfirmData.address}">
+        <p th:attr="def=${addr.defaultStatus},addrId=${addr.id}">[[${addr.name}]]</p>
+		<span class="consignee-address">[[${addr.province}]]  [[${addr.city}]][[${addr.region}]][[${addr.detailAddress}]]
+			<span class="consignee-phone">[[${addr.phone}]]</span>
+		</span>
     </div>
     <p class="p2">更多地址︾</p>
     <div class="hh1"/>
@@ -722,7 +725,7 @@
         </p>
         <p class="qian_y">
             <span>运费： </span>
-            <span class="rmb"> &nbsp ￥0.00</span>
+            <span class="rmb"> &nbsp ￥<span id="fareEle"></span></span>
         </p>
         <p class="qian_y">
             <span>服务费： </span>
@@ -736,8 +739,8 @@
     </div>
 
     <div class="yfze">
-        <p class="yfze_a"><span class="z">应付总额：</span><span class="hq">￥[[${#numbers.formatDecimal(orderConfirmData.getPayPrice(), 1,2)}]]</span></p>
-        <p class="yfze_b">寄送至： 北京 朝阳区 三环到四环之间 朝阳北路复兴国际大厦23层麦田房产 IT-中心研发二部 收货人：赵存权 188****5052</p>
+        <p class="yfze_a"><span class="z">应付总额：</span><span class="hq">￥<span id="payPriceEle">[[${#numbers.formatDecimal(orderConfirmData.getPayPrice(), 1,2)}]]</span></span></p>
+		<p class="yfze_b" id="consignee-info">寄送至： 北京 朝阳区 三环到四环之间 朝阳北路复兴国际大厦23层麦田房产 IT-中心研发二部 收货人：赵存权 188****5052</p>
     </div>
     <button class="tijiao">提交订单</button>
 </div>
@@ -972,8 +975,38 @@
         }, function () {
             $('.h-r-1').css('display', 'none')
         })
+		highlight();
+		var addrId = $(".addr-item p[def='1']").attr("addrId");
+		getFare(addrId);
     })
 
+	function highlight() {
+		$(".addr-item p").css({"border":"2px solid #fff"})
+		$(".addr-item p[def='1']").css({"border":"2px solid red"})
+		var name = $(".addr-item p[def='1']").parent().find("p").text();
+		var address = $(".addr-item p[def='1']").parent().find(".consignee-address").text();
+		var phone = $(".addr-item p[def='1']").parent().find(".consignee.phone").text();
+		$("#consignee-info").text("寄送至： "+ address + " 收货人："+ name +" " +phone);
+	}
+
+	$(".addr-item p").click(function () {
+		$(".addr-item p").attr("def",0);
+		$(this).attr("def",1);
+		highlight();
+		// 获取到当前的地址id
+		var addrId = $(this).attr("addrId");
+		// 发送ajax获取运费信息
+		getFare(addrId);
+	});
+
+    function getFare(addrId) {
+		$.get("http://grainmall.com/api/ware/wareinfo/fare?addrId="+addrId, function (data) {
+			$("#fareEle").text(data.data+".00");
+			var total = [[${orderConfirmData.getTotal()}]]
+			var payPrice = total*1 + data.data;
+			$("#payPriceEle").text(payPrice + ".00");
+		})
+	}
 
 </script>
 </body>
