--- a/mall-order/src/main/resources/templates/confirm.html
+++ b/mall-order/src/main/resources/templates/confirm.html
@@ -742,7 +742,13 @@
         <p class="yfze_a"><span class="z">应付总额：</span><span class="hq">￥<span id="payPriceEle">[[${#numbers.formatDecimal(orderConfirmData.getPayPrice(), 1,2)}]]</span></span></p>
 		<p class="yfze_b" id="consignee-info">寄送至： 北京 朝阳区 三环到四环之间 朝阳北路复兴国际大厦23层麦田房产 IT-中心研发二部 收货人：赵存权 188****5052</p>
     </div>
-    <button class="tijiao">提交订单</button>
+    <form action="http://order.grainmall.com/submitOrder" method="post">
+        <input id="addrIdInput" name="addrId" type="hidden">
+        <input id="payPriceInput" name="payPrice" type="hidden">
+        <input name="orderToken" th:value="${orderConfirmData.orderToken}" type="hidden">
+        <button class="tijiao" type="submit">提交订单</button>
+    </form>
+
 </div>
 </div>
 
@@ -1000,11 +1006,14 @@
 	});
 
     function getFare(addrId) {
+        //给表单回填选择的地址
+        $("#addrIdInput").val(addrId);
 		$.get("http://grainmall.com/api/ware/wareinfo/fare?addrId="+addrId, function (data) {
 			$("#fareEle").text(data.data+".00");
 			var total = [[${orderConfirmData.getTotal()}]]
 			var payPrice = total*1 + data.data;
 			$("#payPriceEle").text(payPrice + ".00");
+            $("#payPriceInput").val(payPrice);
 		})
 	}
 
