--- a/mall-product/src/main/resources/templates/index.html
+++ b/mall-product/src/main/resources/templates/index.html
@@ -204,63 +204,6 @@
             <li th:each="category : ${categorys}">
               <a href="#" class="header_main_left_a" th:attr="ctg-data=${category.getCatId()}" th:text="${category.getName()}"><b>家用电器</b></a>
             </li>
-            <!--<li class="header_li2">
-              <a href="#" class="header_main_left_a" ctg-data="2,4"><b>手机</b> / <b>运营商</b> / <b>数码</b></a>
-
-            </li>
-            <li class="header_li2">
-              <a href="#" class="header_main_left_a" ctg-data="6"><b>电脑</b> / <b>办公</b></a>
-
-            </li>
-            <li class="header_li2">
-              <a href="#" class="header_main_left_a" ctg-data="5,7"><b>家居</b> / <b>家具</b> / <b>家装</b> / <b>厨具</b></a>
-
-            </li>
-            <li class="header_li2">
-              <a href="#" class="header_main_left_a"  ctg-data="9"><b>男装</b> / <b>女装</b> / <b>童装</b> / <b>内衣</b></a>
-
-            </li>
-            <li class="header_li2">
-              <a href="#" class="header_main_left_a"  ctg-data="8"><b>美妆个护 </b>/ <b>宠物</b></a>
-
-            </li>
-            <li class="header_li2">
-              <a href="#" class="header_main_left_a"  ctg-data="11,13,10,15"><b>鞋</b> / <b>箱包</b> / <b>钟表</b> / <b>珠宝</b></a>
-
-            </li>
-            <li class="header_li2">
-              <a href="#" class="header_main_left_a"  ctg-data="17"> <b>运动</b> / <b>户外</b></a>
-
-            </li>
-            <li class="header_li2">
-              <a href="#" class="header_main_left_a" ctg-data="16,21"><b>汽车</b> / <b>汽车用品</b></a>
-
-            </li>
-            <li class="header_li2">
-              <a href="#" class="header_main_left_a" ctg-data="12,18"><b>母婴</b> / <b>玩具乐器</b></a>
-
-            </li>
-            <li class="header_li2">
-              <a href="#" class="header_main_left_a" ctg-data="14,20"><b>食品</b> / <b>酒类</b> / <b>生鲜</b> / <b>特产</b></a>
-
-            </li>
-            <li class="header_li2">
-              <a href="#" class="header_main_left_a" ><b>礼品鲜花</b> / <b>农资绿植</b></a>
-
-            </li>
-            <li class="header_li2">
-              <a href="#" class="header_main_left_a"><b>医药保健</b> / <b>计生情趣</b></a>
-
-            </li>
-            <li class="header_li2">
-              <a href="#" class="header_main_left_a" ctg-data="1"><b>图书</b> / <b>音像</b>/ <b>电子书</b></a>
-
-            </li>
-            <li class="header_li2">
-              <a href="#" class="header_main_left_a" ctg-data="19"><b>彩票</b> / <b>酒店</b> / <b>旅游</b> / <b>生活</b></a>
-
-            </li>-->$
-
           </ul>
 
         </div>
@@ -575,32 +518,12 @@
       <div class="swiper-container swiper_section_second_list_left">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <ul>
-              <li>
-                <img src="/static/index/img/section_second_list_img1.jpg" alt="">
-                <p>花王 (Merries) 妙而舒 纸尿裤 大号 L54片 尿不湿（9-14千克） （日本官方直采） 花王 (Merries) 妙而舒 纸尿裤 大号 L54片 尿不湿（9-14千</p>
-                <span>¥83.9</span><s>¥99.9</s>
-              </li>
-              <li>
-                <img src="/static/index/img/section_second_list_img2.jpg" alt="">
-                <p>华为mate9 4GB+32GB版 月光银 移动联通电信4G手机 双卡</p>
-                <span>¥17.90</span><s>¥29.90</s>
-              </li>
-              <li>
-                <img src="/static/index/img/section_second_list_img3.jpg" alt="">
-                <p>超能 植翠低泡洗衣液（鲜艳亮丽）2kg/袋装（新老包装随机</p>
-                <span>¥20.70</span><s>¥44.90</s>
-              </li>
-              <li>
-                <img src="/static/index/img/section_second_list_img4.jpg" alt="">
-                <p>长城（GreatWall）红酒 特选5年橡木桶解百纳干红葡萄酒 整</p>
-                <span>¥399.00</span><s>¥599.00</s>
-              </li>
-              <li>
-                <img src="/static/index/img/section_second_list_img5.jpg" alt="">
-                <p>惠普(HP)暗影精灵2代Pro 15.6英寸游戏笔记本电脑(i5-7300H</p>
-                <span>¥5999.00</span><s>¥6499.00</s>
-              </li>
+            <ul id="seckillSkuCountent">
+<!--              <li>-->
+<!--                <img src="/static/index/img/section_second_list_img1.jpg" alt="">-->
+<!--                <p>花王 (Merries) 妙而舒 纸尿裤 大号 L54片 尿不湿（9-14千克） （日本官方直采） 花王 (Merries) 妙而舒 纸尿裤 大号 L54片 尿不湿（9-14千</p>-->
+<!--                <span>¥83.9</span><s>¥99.9</s>-->
+<!--              </li>-->
             </ul>
           </div>
           <div class="swiper-slide">
@@ -666,6 +589,21 @@
       var keyword=$("#searchText").val()
       window.location.href="http://search.grainmall.com/list.html?keyword="+keyword;
   }
+
+  $.get("http://seckill.grainmall.com/currentSeckillSkus",function(resp){
+
+    if(resp.data.length > 0){
+      resp.data.forEach(function (item) {
+        $("<li></li>")
+                .append($("<img style='width: 130px; height: 130px;' src='"+item.skuInfo.skuDefaultImg+"'/>"))
+                .append($("<p>"+item.skuInfo.skuTitle+"</p>"))
+                .append($("<span>¥"+item.seckillPrice+"</span>"))
+                .append($("<s>¥"+item.skuInfo.price+"</s>"))
+                .appendTo("#seckillSkuCountent");
+      })
+
+    }
+  });
 
 </script>
 <script type="text/javascript" src="/static/index/js/text.js"></script>
